Commented contacts page and charts page

--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -14,6 +14,7 @@
         <h3>Phone:</h3>
     </header>
     <p>
+        <!--Fake phone number for purpose of assignment-->
         <span class="label">Main:</span>
         <span>000 1234567</span>
     </p>
@@ -28,6 +29,7 @@
         <h3>Email:</h3>
     </header>
     <p>
+        <!--Real email addresses set up for the project-->
         <span class="label">Support:</span>
         <span><a href="mailto:alltheairgead@gmail.com">Support@gmail.com</a></span>
     </p>
