--- a/Charts/MonthGraph.cshtml
+++ b/Charts/MonthGraph.cshtml
@@ -3,7 +3,7 @@
     var db = Database.Open("StarterSite");
     var CurrentUserId = WebSecurity.CurrentUserId;
     var data = db.Query("SELECT Date, SUM(Price) as TotalPrice FROM Expense WHERE UserId = " + @CurrentUserId + "AND Month(Date) = Month(getdate()) GROUP BY Date");
-    <!--var DinCat = data.Select("Category");-->
+    <!--query to get total price of each category seperated and then charted across the month-->
     
     var myChart = new Chart(width: 600, height: 400, themePath: "~/Charts/MyChartTheme.xml");
         myChart=myChart.AddTitle("Monthly Costs: ");
